--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "JSONPath": "^0.10.0",
     "async": "^0.9.0",
+    "attempt": "^1.0.1",
     "cli-table": "^0.3.1",
     "commander": "^2.8.0",
     "debug": "^2.1.3",
