--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/moul/scaleway-cli"
+    "url": "https://github.com/scaleway/scaleway-cli"
   },
   "keywords": [
     "api",
@@ -25,9 +25,9 @@
   "author": "Manfred Touron <m@42.am> (@moul)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/moul/scaleway-cli/issues"
+    "url": "https://github.com/scaleway/scaleway-cli/issues"
   },
-  "homepage": "https://github.com/moul/scaleway-cli",
+  "homepage": "https://github.com/scaleway/scaleway-cli",
   "dependencies": {
     "JSONPath": "^0.10.0",
     "async": "^0.9.0",
